Bug 1494676 - Always consider scrollframes with will-change: scroll active r=tnikkel

This bypasses will-change budgeting for frames will-change: scroll.

Differential Revision: https://phabricator.services.mozilla.com/D118373